# colorize

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  bootstrap.sh  config.h.in  configure.ac
src/: Makefile.am  bmp.h  colorize.c  filecompare.c  helpers.c  main.h  test.c  ui.c
